// version of proto (default set to "proto2")
syntax = "proto3";

// path to place generated go code
// "PATH;PACKAGE_NAME" notation can be used to name generated go package
option go_package = "pkg/grpc;pb";

// package declaration
// package can be used for referencing types across files
package hello;

// service definition
service GreetingService {
  // unary RPC service method
  rpc Hello (HelloRequest) returns (HelloResponse);
  // server streaming RPC
  rpc HelloServerStream (HelloRequest) returns (stream HelloResponse);
  // client streaming RPC
  rpc HelloClientStream (stream HelloRequest) returns (HelloResponse);
  // bidirectional streaming RPC
  rpc HelloBiStreams (stream HelloRequest) returns (stream HelloResponse);
}

// type definition
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
